tests/snapshots/trace_solver__spanshot_request@10684643748943027761.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    inherited_ref_on_ref: EatInner
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: true
    rules_display_style: Plain
  bundle_name: ergo2024
  request: "&[x]: &&mut [T]"
---
&[x] @ p: &&mut [T]
// Applying rule `Deref(EatOuter)`
[x] @ *p: &mut [T]
// Applying rule `ConstructorRef`
x @ &(**p).0: &T
// Applying rule `Binding`
let x: &T = &(**p).0

// Final bindings (simplified):
let x: &T = &(**p).0;
